--- a/Assets/Reclaim/UI/UXML/MainMenu.uxml
+++ b/Assets/Reclaim/UI/UXML/MainMenu.uxml
@@ -5,7 +5,7 @@
             <ui:Label text="Reclaim" style="font-size: 115px;" />
             <ui:Button text="Start" name="Start-Button" />
             <ui:Button text="Settings" name="Settings-Button" />
-            <ui:Button text="End" name="End-Button" style="background-color: rgba(204, 0, 41, 0.24);" />
+            <ui:Button text="End" name="End-Button" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
